[package]
name = "web_ws"
version = "0.1.0"
authors = ["tet <gmorer@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { version = "0.3.8" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "BinaryType", "ErrorEvent", "MessageEvent", "Blob"] }
js-sys = { version = "0.3" }
bytes = "1"

